# Bolt

./: CMakeLists.txt
cmake/: copy-cef-runtime.cmake.in
share/: bolt.desktop.in  bolt.game.desktop.in  metainfo.xml.in
src/: main.cxx
src/snitray/: StatusNotifierItem.xml  snitray.c  snitray.h
